sonar lint fix